# RPG-CPP-Remake

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  version.json
.github/: copilot-instructions.md  release-notes.md
.github/workflows/: build.yml
assets/icons/: app.icns
assets/input/: bindings.json
cmake/: windows_app_icon.rc.in
scripts/: generate_icons.sh  run_linux.sh  run_macos.sh  run_windows.sh
src/: main.cpp
src/core/: InputBindings.cpp  InputBindings.hpp  TimeController.cpp  TimeController.hpp
src/game/: GameApp.cpp  GameApp.hpp  Player.cpp  Player.hpp
src/ui/: Widgets.cpp  Widgets.hpp
